poniendo botón más intuitivo con el usuario

--- a/pokemon.html
+++ b/pokemon.html
@@ -19,9 +19,7 @@
 		<span class="ss-logout">Salir</span>
 	</nav>
 	<section class="ss-body">
-		<article class="ss-content-cards">
-			
-		</article>
+		<article class="ss-content-cards"></article>
 	</section>	
 </body>
 </html>
